Fix #427 use pure css for z-index tootip styling

--- a/app/styles/less/code-mirror-overrides.less
+++ b/app/styles/less/code-mirror-overrides.less
@@ -40,10 +40,6 @@ div.CodeMirror {
   color: #777
 }
 
-.CodeMirror-code #tooltip-over {
-  z-index: 1000;
-}
-
 .CodeMirror-hints {
   background-color: rgba(19,33,40,1);
   border-radius: 0;
